Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Mdaliejaz.github.io : " />
+    <meta name="description" content="Software Plumber : Developer" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Mdaliejaz.github.io</title>
+    <title>Software Plumber</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mdaliejaz">View on GitHub</a>
 
-          <h1 id="project_title">Mdaliejaz.github.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Software Plumber</h1>
+          <h2 id="project_tagline">Developer</h2>
 
         </header>
     </div>
@@ -27,9 +27,16 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Who am i...</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Well, i don't have a fancy answer like "i'm Spiderman" or of that sort. It's in fact a tough question to answer for people like me :P But if creativity is what requires for this answer, i'm a software plumber ;-)</p>
+
+<p>I'm a foodie who loves travelling and try all sorts of dishes (as long as it's halal ;-)). If you are meeting me for the first time you might find me to be a quiet person, but you will be wrong if we meet again. I work as a software developer with ThoughtWorks Studios on the CI/CD product called 'Go'.</p>
+
+<p>You can tweet me at <a href="https://github.com/mdaliejaz" class="user-mention">@mdaliejaz</a> 
+or mail me on <a href="mailto:mdaliejaz@gmail.com">mdaliejaz@gmail.com</a></p>
+
+<p>From github: ---deprecated---</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
